--- a/package.json
+++ b/package.json
@@ -1,18 +1,54 @@
 {
-  "name": "digitaltwin",
+  "name": "digital-twin",
   "version": "1.0.0",
-  "description": "Digital Twin Chaincode",
+  "description": "Digital Twin contract implemented in JavaScript",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
+    "lint": "eslint *.js */**.js",
+    "pretest": "npm run lint",
+    "test": "nyc mocha --recursive",
     "start": "fabric-chaincode-node start"
   },
+  "engineStrict": true,
+  "author": "Hyperledger",
+  "license": "Apache-2.0",
   "dependencies": {
     "@node-wot/binding-http": "^0.8.14",
-    "@node-wot/browser-bundle": "^0.8.14",
     "@node-wot/core": "^0.8.14",
     "fabric-ca-client": "^2.2.20",
-    "fabric-contract-api": "^2.5.6",
+    "fabric-contract-api": "~2.5",
     "fabric-network": "^2.2.20",
-    "fabric-shim": "^2.5.6"
+    "fabric-shim": "~2.5",
+    "json-stringify-deterministic": "^1.0.0",
+    "sort-keys-recursive": "^2.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.4.1",
+    "eslint": "^8.57.0",
+    "mocha": "^10.4.0",
+    "nyc": "^15.1.0",
+    "sinon": "^18.0.0",
+    "sinon-chai": "^3.7.0"
+  },
+  "nyc": {
+    "exclude": [
+      "coverage/**",
+      "test/**",
+      "index.js",
+      ".eslintrc.js"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "all": true,
+    "check-coverage": true,
+    "statements": 100,
+    "branches": 100,
+    "functions": 100,
+    "lines": 100
   }
 }
